--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
