--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,4 @@
 AUTH_SECRET="xeUb0y1DQlLDK0lNeDI6oTv0VzDkRpZJGxmGkXq/TRU=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 NEXT_PUBLIC_API_URL=http://103.170.246.84:8822/api/v1
+NEXTAUTH_URL=http://localhost:3004
+AUTH_TRUST_HOST=TRUE
