--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
     "react-medium-image-zoom": "^5.2.14",
     "sonner": "^2.0.3",
